[tool.poetry]
name = "langchain-experiments"
version = "0.1.0"
description = ""
authors = ["Jacob Brady <jacob.brady@protonmail.com>"]
readme = "README.md"
#packages = [{include = "langchain_experiments"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.186"
openai = "^0.27.7"
gradio = "^3.32.0"
click = "^8.1.3"
rich = "^13.3.5"
typer = "^0.9.0"
unstructured = "^0.7.0"
tabulate = "^0.9.0"
pdf2image = "^1.16.3"
chromadb = "^0.3.25"
tiktoken = "^0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mkdocs = "^1.4.3"
ipython = "^8.13.2"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
